--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="flex-grow-1">
 
                             <h3 class="mt-4">Brasília</h3>
-                            <p>Por diversos anos tenho o orgulho de pessoalmente ir à Brasilia em busca de recursos para nossa cidade. Sempre fomos recebidos de braços abertos por nossos parceiros e amigos de caminhada!</p>
+                            <p>Por diversos anos tenho o prazer de pessoalmente ir à Brasilia em busca de recursos para nossa cidade. Sempre fomos recebidos de braços abertos por nossos parceiros e amigos de caminhada!</p>
 
                             <div id="carouselExampleIndicatorsd" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -335,7 +335,7 @@
                         <div class="flex-grow-1">
 
                             <h3 class="mt-4">Prevenção contra as drogas</h3>
-                            <p>Desde 2014, quando criamos a lei 1517/2014 de prevenção contra as drogas, toda 1 semana de julho separamos um tempo para concientizar nossa população e alunos desse importante tema que tem que ser amplamente discutido!</p>
+                            <p>Desde 2014, quando criamos a lei 1517/2014 de prevenção contra as drogas, toda 1 semana de julho separamos um tempo para conscientizar nossa população e alunos desse importante tema que tem que ser amplamente discutido!</p>
 
                             <h3 class="mt-4">o que faz um vereador?</h3>
                             <p>Tivemos o prazer de passar uma manhã com nossas crianças, tirando suas duvidas e explicando um pouco do importante trabalho que o vereador exerce no município!</p>
