--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                             </div>
 
                             <h3 class="mt-4">Bairro Capixaba</h3>
-                            <p>Solicitamos ao prefeito e à secretaria de competência em nome da comunidade, um novo boeiro e o alargamento da estrada naquele local. Estivemos acompanhando o período das obras até o término dela, o que foi muito bem executada pelo secretário e os demais funcionários com competência e zelo.</p>
+                            <p>Solicitamos ao prefeito e à secretaria de competência em nome da comunidade, um novo bueiro e o alargamento da estrada naquele local. Estivemos acompanhando o período das obras até o término dela, o que foi muito bem executada pelo secretário e os demais funcionários com competência e zelo.</p>
 
                             <div id="carouselExampleIndicators4c" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
