--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                         <div class="flex-grow-1">
 
                             <h3 class="mt-4">FESTA DE SETEMBRO</h3>
-                            <p>Nos últimos anos, conseguimos por meio do Ministerio do Turismo, na ocasião, tinhamos como ministro adjundo do Ministério do Turismo nosso amigo e ex deputado federal, Lelo Coimbra. Somos muito gratos por tanta atenção e zelo para com nosso município!</p>
+                            <p>Nos últimos anos, conseguimos por meio do Ministerio do Turismo shows nacionais, na ocasião, tinhamos como ministro adjundo do Ministério do Turismo nosso amigo e ex deputado federal, Lelo Coimbra. Somos muito gratos por tanta atenção e zelo para com nosso município!</p>
 
                             <div id="carouselExampleIndicatorsTur" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
