--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
                             </div>
 
                             <h3 class="mt-4">Calçamento das casas populares</h3>
-                            <p>Importante obra para nosso município, obra essa que foi solicitada por nós e que se tornou realidade atraves dos recursos enviados pelos deputados Lelo Coimbra e Marcelo Santos.</p>
+                            <p>Importante obra para nosso município, obra essa que foi solicitada por mim juntamente com o Prefeito Sérgio Fonseca e que se tornou realidade atraves dos recursos enviados pelos deputados Lelo Coimbra e Marcelo Santos.</p>
 
                             <div id="carouselExampleIndicators6c" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
